# Cybersec2021

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: style_check.yml
20211001/ex1/: ex1.py
20211001/ex2/: description.txt  ex2.py
20211001/ex3/: ex3.py
20211001_PythonIntro/ex1/: description.txt
20211001_PythonIntro/ex2/: description.txt
20211001_PythonIntro/ex3/: description.txt  ex3.py
20211007/1_valley_of_fear/: description.txt  solution.py
20211007/2_sherlock/: challenge.txt  description.txt
20211007/3_ultraencoded/: description.txt
20211007_Encoding/2_sherlock/: README.md
20211007_Encoding/3_ultraencoded/: README.md
20211008/1_julius/: description.txt
20211008/2_I_agree/: README.md
20211008/3_alphabet_soup/: encrypted.txt
20211008/4_simpledes/: solution.py
20211008_Encryption/1_julius/: README.md
20211008_Encryption/2_I_agree/: description.txt
20211008_Encryption/3_alphabet_soup/: README.md
20211008_Encryption/4_simpledes/: README.md  description.txt
20211014_Encryption2/1_crack_the_hash/: README.md  description.txt
20211014_Encryption2/2_readyxor_not/: README.md  description.txt  solution.py
20211014_Encryption2/3_top/: README.md  description.txt  solution.py  top.py  top_secret
20211014_Encryption2/4_repeated_xor/: README.md  description.txt
20211015_Auth/1_Sniffing/: README.md  description.txt
20211015_Auth/2_gforce/: README.md  description.txt
20211015_Auth/3_remote_multimedia_controller/: README.md  (+1 more)
20211112_PartialExam/: Instructions.md
20211217_PartialExam/: README.md
(+216 files in other folders)
