[tool.poetry]
name = "cybersec2021"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augustocesare.zanellato@studenti.unipd.it>"]

[tool.poetry.dev-dependencies]
pydocstyle = "^5.1"
pycodestyle = "^2.6"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["."]
line_length = 120
wrap_length = 120
py_version = 39
color_output = true
balanced_wrapping = true

[tool.black]
line-length = 120
target-version = ['py38'] #doesn't support py39
include = '\.pyi?$'
